[package]
name = "diatom"
version = "0.4.4"
edition = "2021"
authors = [ "Terence Ng", "Aoyang Yu" ]
description = "The diatom programming language"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/diatom-lang/diatom.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11"
regex = "1.7"
lazy_static = "1.4"
bimap = "0.6"
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng", "std"] }
reedline = { version = "0.15", optional = true }
nu-ansi-term = { version = "0.46", optional = true }
crossterm = { version = "0.24", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
enum_dispatch = "0.3"
either = "1.8"

[dev-dependencies]
include_dir = { version = "0.7", features = ["glob"] }

[features]
default = ["console"]
console = ["reedline", "nu-ansi-term", "crossterm", "clap"]
profile = []

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
