[package]
name = "diatom"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["diatom-core", "diatom-cli"]

[workspace.package]
version = "0.6.0-alpha"
edition = "2021"
authors = [ "Terence Ng", "Aoyang Yu" ]
description = "The diatom programming language"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/diatom-lang/diatom.git"

[workspace.dependencies]
regex = "1.7"
lazy_static = "1.4"

[dependencies]
diatom-core = { path = "diatom-core" }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
