[workspace]
members = ["diatom", "diatom-core", "diatom-cli", "diatom-std-core"]

[workspace.package]
edition = "2021"
authors = [ "Terence Ng", "Aoyang Yu" ]
description = "The diatom programming language"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/diatom-lang/diatom.git"

[workspace.dependencies]
regex = "1.7"
lazy_static = "1.4"
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng", "std"] }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
