[package]
name = "diatom-core"
version = "0.6.1"
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codespan-reporting = "0.11"
bimap = "0.6"
regex.workspace = true
lazy_static.workspace = true
ahash.workspace = true
more-asserts = "0.3"
enum_dispatch = "0.3"
either = "1.8"

[features]
profile = []
